tests/language_modules/11_errors_results/invalid_semantics/unknown_returned_error.vf
module UnknownReturnedError

error NotFound

function load() returns Result<Integer, NotFound>
is
    return error MissingError
end load

end UnknownReturnedError